--- a/archives/toutiao-search/2024-04-22.md
+++ b/archives/toutiao-search/2024-04-22.md
@@ -1,55 +1,72 @@
 # 2024-04-22
 
-共 244 条
+共 258 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 22 2024 16:08:01 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 22 2024 17:00:47 GMT+0800 (China Standard Time) -->
+1. [父亲殴打霸凌者获赞：私力复仇可行吗](https://so.toutiao.com/search?keyword=父亲殴打霸凌者获赞：私力复仇可行吗)
+1. [1名正部、2名副部同日被开除党籍](https://so.toutiao.com/search?keyword=1名正部、2名副部同日被开除党籍)
+1. [仰望浩瀚星空 爱护美丽地球](https://so.toutiao.com/search?keyword=仰望浩瀚星空+爱护美丽地球)
+1. [9岁男孩当街遭人重伤](https://so.toutiao.com/search?keyword=9岁男孩当街遭人重伤)
 1. [布林肯4月24日至26日访华](https://so.toutiao.com/search?keyword=布林肯4月24日至26日访华)
 1. [高中生被楼上坠落树根砸中身亡](https://so.toutiao.com/search?keyword=高中生被楼上坠落树根砸中身亡)
-1. [仰望浩瀚星空 爱护美丽地球](https://so.toutiao.com/search?keyword=仰望浩瀚星空+爱护美丽地球)
-1. [媒体评父亲替女儿殴打霸凌者获点赞](https://so.toutiao.com/search?keyword=媒体评父亲替女儿殴打霸凌者获点赞)
 1. [以色列呼吁欧洲尽快觉醒与伊朗对抗](https://so.toutiao.com/search?keyword=以色列呼吁欧洲尽快觉醒与伊朗对抗)
-1. [孙颖莎谈擦边球](https://so.toutiao.com/search?keyword=孙颖莎谈擦边球)
-1. [王健林全资控股珠海万达公司](https://so.toutiao.com/search?keyword=王健林全资控股珠海万达公司)
-1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
 1. [美方代表认出中国红旗车大声惊叹](https://so.toutiao.com/search?keyword=美方代表认出中国红旗车大声惊叹)
-1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
-1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
-1. [男孩跳向路边井盖 不慎掉进下水道](https://so.toutiao.com/search?keyword=男孩跳向路边井盖+不慎掉进下水道)
-1. [女儿遭霸凌 家长打同学能免罚吗](https://so.toutiao.com/search?keyword=女儿遭霸凌+家长打同学能免罚吗)
-1. [官方辟谣广东英德洪水致码头溃堤](https://so.toutiao.com/search?keyword=官方辟谣广东英德洪水致码头溃堤)
-1. [雷军疑似回应华为截胡小米SU7](https://so.toutiao.com/search?keyword=雷军疑似回应华为截胡小米SU7)
-1. [家长打男生内情：女儿多次遭霸凌](https://so.toutiao.com/search?keyword=家长打男生内情：女儿多次遭霸凌)
-1. [全红婵书包挂了个“动物园”吧](https://so.toutiao.com/search?keyword=全红婵书包挂了个“动物园”吧)
-1. [华为回应截胡小米SU7：不知情](https://so.toutiao.com/search?keyword=华为回应截胡小米SU7：不知情)
-1. [家长疑殴打霸凌女儿的同学被行拘](https://so.toutiao.com/search?keyword=家长疑殴打霸凌女儿的同学被行拘)
-1. [金价涨到700元不敢买也不敢卖](https://so.toutiao.com/search?keyword=金价涨到700元不敢买也不敢卖)
-1. [五一前你还要上几天班](https://so.toutiao.com/search?keyword=五一前你还要上几天班)
-1. [9岁男孩当街遭人重伤](https://so.toutiao.com/search?keyword=9岁男孩当街遭人重伤)
-1. [两男子挨个掀鱼摊盖板致鱼缺氧死亡](https://so.toutiao.com/search?keyword=两男子挨个掀鱼摊盖板致鱼缺氧死亡)
-1. [女子找王婆说媒要求男方月入超2万5](https://so.toutiao.com/search?keyword=女子找王婆说媒要求男方月入超2万5)
-1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
+1. [王健林全资控股珠海万达公司](https://so.toutiao.com/search?keyword=王健林全资控股珠海万达公司)
 1. [网友：保证双休是调休的前提](https://so.toutiao.com/search?keyword=网友：保证双休是调休的前提)
+1. [女儿遭霸凌 家长打同学能免罚吗](https://so.toutiao.com/search?keyword=女儿遭霸凌+家长打同学能免罚吗)
+1. [雷军疑似回应华为截胡小米SU7](https://so.toutiao.com/search?keyword=雷军疑似回应华为截胡小米SU7)
+1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
+1. [官方辟谣广东英德洪水致码头溃堤](https://so.toutiao.com/search?keyword=官方辟谣广东英德洪水致码头溃堤)
+1. [家长打男生内情：女儿多次遭霸凌](https://so.toutiao.com/search?keyword=家长打男生内情：女儿多次遭霸凌)
+1. [孙颖莎谈擦边球](https://so.toutiao.com/search?keyword=孙颖莎谈擦边球)
+1. [广东英德洪水水位有所下降](https://so.toutiao.com/search?keyword=广东英德洪水水位有所下降)
+1. [家长疑殴打霸凌女儿的同学被行拘](https://so.toutiao.com/search?keyword=家长疑殴打霸凌女儿的同学被行拘)
+1. [媒体：开封王婆江西说媒热度难再](https://so.toutiao.com/search?keyword=媒体：开封王婆江西说媒热度难再)
+1. [全红婵书包挂了个“动物园”吧](https://so.toutiao.com/search?keyword=全红婵书包挂了个“动物园”吧)
+1. [大V评家长殴打霸凌者：学校不作为](https://so.toutiao.com/search?keyword=大V评家长殴打霸凌者：学校不作为)
+1. [男孩跳向路边井盖 不慎掉进下水道](https://so.toutiao.com/search?keyword=男孩跳向路边井盖+不慎掉进下水道)
+1. [为何被海鲜扎手可能丧命](https://so.toutiao.com/search?keyword=为何被海鲜扎手可能丧命)
+1. [新能源车主称买车容易养车难](https://so.toutiao.com/search?keyword=新能源车主称买车容易养车难)
+1. [女老师去学校路上失踪 警方立案](https://so.toutiao.com/search?keyword=女老师去学校路上失踪+警方立案)
+1. [男子转移被困家人 边救人边吐泥水](https://so.toutiao.com/search?keyword=男子转移被困家人+边救人边吐泥水)
+1. [12306被质疑纵容“买长乘短”](https://so.toutiao.com/search?keyword=12306被质疑纵容“买长乘短”)
+1. [产妇父亲突然倒地医护人员光速抢救](https://so.toutiao.com/search?keyword=产妇父亲突然倒地医护人员光速抢救)
+1. [父亲拍14岁女儿杂乱房间发同学群](https://so.toutiao.com/search?keyword=父亲拍14岁女儿杂乱房间发同学群)
+1. [金价涨到700元不敢买也不敢卖](https://so.toutiao.com/search?keyword=金价涨到700元不敢买也不敢卖)
+1. [台男子坠入山谷10天机智自救](https://so.toutiao.com/search?keyword=台男子坠入山谷10天机智自救)
 1. [名嘴：解放军很快就可到达台北上空](https://so.toutiao.com/search?keyword=名嘴：解放军很快就可到达台北上空)
+1. [央媒评许美静演唱会风波](https://so.toutiao.com/search?keyword=央媒评许美静演唱会风波)
+1. [《哈尔滨一九四四》首播口碑](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》首播口碑)
+1. [上铺老人强占下铺还指责铁路](https://so.toutiao.com/search?keyword=上铺老人强占下铺还指责铁路)
+1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
+1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
+1. [以色列使用了什么武器打击伊朗目标](https://so.toutiao.com/search?keyword=以色列使用了什么武器打击伊朗目标)
+1. [今年第二个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第二个龙年龙月龙日龙时)
+1. [司机后座藏38万现金入境被海关查获](https://so.toutiao.com/search?keyword=司机后座藏38万现金入境被海关查获)
+1. [女子福建海边偶遇蓝眼泪](https://so.toutiao.com/search?keyword=女子福建海边偶遇蓝眼泪)
+1. [雷军：北京车展上会详细介绍产能](https://so.toutiao.com/search?keyword=雷军：北京车展上会详细介绍产能)
+1. [女子找王婆说媒要求男方月入超2万5](https://so.toutiao.com/search?keyword=女子找王婆说媒要求男方月入超2万5)
+1. [亚洲打响货币保卫战？](https://so.toutiao.com/search?keyword=亚洲打响货币保卫战？)
+1. [运动员东京奥运会药检阳性？中方回应](https://so.toutiao.com/search?keyword=运动员东京奥运会药检阳性？中方回应)
+1. [智界汽车发文感谢雷军推荐智界S7](https://so.toutiao.com/search?keyword=智界汽车发文感谢雷军推荐智界S7)
+1. [以男子踢翻巴勒斯坦国旗后遭炸伤](https://so.toutiao.com/search?keyword=以男子踢翻巴勒斯坦国旗后遭炸伤)
+1. [钟薛高创始人：卖红薯也要把债还上](https://so.toutiao.com/search?keyword=钟薛高创始人：卖红薯也要把债还上)
+1. [西湖大爷说和周杰伦合唱很开心](https://so.toutiao.com/search?keyword=西湖大爷说和周杰伦合唱很开心)
+1. [男子嫖娼时突发疾病身亡 家属索赔](https://so.toutiao.com/search?keyword=男子嫖娼时突发疾病身亡+家属索赔)
+1. [媒体评父亲替女儿殴打霸凌者获点赞](https://so.toutiao.com/search?keyword=媒体评父亲替女儿殴打霸凌者获点赞)
+1. [华为回应截胡小米SU7：不知情](https://so.toutiao.com/search?keyword=华为回应截胡小米SU7：不知情)
+1. [五一前你还要上几天班](https://so.toutiao.com/search?keyword=五一前你还要上几天班)
+1. [两男子挨个掀鱼摊盖板致鱼缺氧死亡](https://so.toutiao.com/search?keyword=两男子挨个掀鱼摊盖板致鱼缺氧死亡)
 1. [“王婆”的红线为江西牵出了什么](https://so.toutiao.com/search?keyword=“王婆”的红线为江西牵出了什么)
 1. [解放军为何全新打造一支战略性兵种](https://so.toutiao.com/search?keyword=解放军为何全新打造一支战略性兵种)
-1. [华为Pura 70标准版及Pro+版开售](https://so.toutiao.com/search?keyword=华为Pura+70标准版及Pro+版开售)
-1. [西湖大爷说和周杰伦合唱很开心](https://so.toutiao.com/search?keyword=西湖大爷说和周杰伦合唱很开心)
-1. [女子福建海边偶遇蓝眼泪](https://so.toutiao.com/search?keyword=女子福建海边偶遇蓝眼泪)
 1. [江苏一季度GDP为31020.4亿元](https://so.toutiao.com/search?keyword=江苏一季度GDP为31020.4亿元)
-1. [新能源车主称买车容易养车难](https://so.toutiao.com/search?keyword=新能源车主称买车容易养车难)
 1. [菲为何没出席我海军承办的西太论坛](https://so.toutiao.com/search?keyword=菲为何没出席我海军承办的西太论坛)
-1. [今年第二个龙年龙月龙日龙时](https://so.toutiao.com/search?keyword=今年第二个龙年龙月龙日龙时)
 1. [周杰伦演唱会把外套送给粉丝](https://so.toutiao.com/search?keyword=周杰伦演唱会把外套送给粉丝)
 1. [女子掀翻地铁口草莓摊称是她的地盘](https://so.toutiao.com/search?keyword=女子掀翻地铁口草莓摊称是她的地盘)
-1. [加沙超万名妇女被杀害 联合国发声](https://so.toutiao.com/search?keyword=加沙超万名妇女被杀害+联合国发声)
-1. [女律师否认做擦边直播月入2万](https://so.toutiao.com/search?keyword=女律师否认做擦边直播月入2万)
-1. [12306被质疑纵容“买长乘短”](https://so.toutiao.com/search?keyword=12306被质疑纵容“买长乘短”)
 1. [万达集团“瘦身”计划仍在持续](https://so.toutiao.com/search?keyword=万达集团“瘦身”计划仍在持续)
 1. [比亚迪唐家族多车上市](https://so.toutiao.com/search?keyword=比亚迪唐家族多车上市)
-1. [《哈尔滨一九四四》首播口碑](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》首播口碑)
 1. [男子爬树摘樱桃不慎坠亡](https://so.toutiao.com/search?keyword=男子爬树摘樱桃不慎坠亡)
-1. [钟薛高创始人：卖红薯也要把债还上](https://so.toutiao.com/search?keyword=钟薛高创始人：卖红薯也要把债还上)
 1. [杨幂新剧演技](https://so.toutiao.com/search?keyword=杨幂新剧演技)
 1. [谷爱凌在姚明旁秒变mini](https://so.toutiao.com/search?keyword=谷爱凌在姚明旁秒变mini)
 1. [1只虾28元：明码标价不等于随意定价](https://so.toutiao.com/search?keyword=1只虾28元：明码标价不等于随意定价)
@@ -57,7 +74,6 @@
 1. [蓝色粮仓“种”出这些新成果](https://so.toutiao.com/search?keyword=蓝色粮仓“种”出这些新成果)
 1. [直击粤北洪水过境](https://so.toutiao.com/search?keyword=直击粤北洪水过境)
 1. [赖清德妄称让世界看到守护台湾决心](https://so.toutiao.com/search?keyword=赖清德妄称让世界看到守护台湾决心)
-1. [亚洲打响货币保卫战？](https://so.toutiao.com/search?keyword=亚洲打响货币保卫战？)
 1. [淘宝88VIP推出无限次退货包运费](https://so.toutiao.com/search?keyword=淘宝88VIP推出无限次退货包运费)
 1. [98年女孩回应讲兵马俑火上央视](https://so.toutiao.com/search?keyword=98年女孩回应讲兵马俑火上央视)
 1. [河南一高校内篮球比赛爆发冲突](https://so.toutiao.com/search?keyword=河南一高校内篮球比赛爆发冲突)
@@ -81,11 +97,9 @@
 1. [伊朗为何要在发动空袭之前示警](https://so.toutiao.com/search?keyword=伊朗为何要在发动空袭之前示警)
 1. [G7峰会没邀请韩国 尹锡悦政府挨批](https://so.toutiao.com/search?keyword=G7峰会没邀请韩国+尹锡悦政府挨批)
 1. [山东网友质疑燃气换表后直接翻倍](https://so.toutiao.com/search?keyword=山东网友质疑燃气换表后直接翻倍)
-1. [以男子踢翻巴勒斯坦国旗后遭炸伤](https://so.toutiao.com/search?keyword=以男子踢翻巴勒斯坦国旗后遭炸伤)
 1. [加沙一男子一夜之间失去所有亲人](https://so.toutiao.com/search?keyword=加沙一男子一夜之间失去所有亲人)
 1. [广东省长冒雨到大堤检查防汛](https://so.toutiao.com/search?keyword=广东省长冒雨到大堤检查防汛)
 1. [以军空袭拉法造成至少19人死亡](https://so.toutiao.com/search?keyword=以军空袭拉法造成至少19人死亡)
-1. [以色列使用了什么武器打击伊朗目标](https://so.toutiao.com/search?keyword=以色列使用了什么武器打击伊朗目标)
 1. [乌总统称乌不会成“第二个阿富汗”](https://so.toutiao.com/search?keyword=乌总统称乌不会成“第二个阿富汗”)
 1. [网友谈吴燕妮化妆比赛：个人自由](https://so.toutiao.com/search?keyword=网友谈吴燕妮化妆比赛：个人自由)
 1. [马龙感谢自己0比3时没放弃](https://so.toutiao.com/search?keyword=马龙感谢自己0比3时没放弃)
